[package]
name = "async-nats"
authors = ["Tomasz Pietrek <tomasz@nats.io>", "Casper Beyer <caspervonb@pm.me>"]
version = "0.33.0"
edition = "2021"
rust = "1.67.0"
description = "A async Rust NATS client"
license = "Apache-2.0"
documentation = "https://docs.rs/async-nats"
homepage = "https://github.com/nats-io/nats.rs"
repository = "https://github.com/nats-io/nats.rs"
readme = "../README.md"
keywords = ["nats", "client", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
memchr = "2.4"
bytes = { version = "1.4.0", features = ["serde"] }
futures = { version = "0.3.28", default-features = false, features = ["std"] }
nkeys = "0.3.1"
once_cell = "1.18.0"
regex = "1.9.1"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
http = "0.2.9"
tokio = { version = "1.29.0", features = ["macros", "rt", "fs", "net", "sync", "time", "io-util"] }
url = { version = "2"}
tokio-rustls = "0.24"
rustls-pemfile = "1.0.2"
nuid = "0.5"
serde_nanos = "0.1.3"
time = { version = "0.3.24", features = ["parsing", "formatting", "serde", "serde-well-known"] }
rustls-native-certs = "0.6"
tracing = "0.1"
thiserror = "1.0"
base64 = "0.21"
tokio-retry = "0.3"
ring = "0.17"
rand = "0.8"
webpki = { package = "rustls-webpki", version = "0.101.2", features = ["alloc", "std"] }

# for -Z minimal-versions
rustls = "0.21.6" # used by tokio-rustls 0.24.0

[dev-dependencies]
criterion =  { version = "0.5", features = ["async_tokio"]}
nats-server = { path = "../nats-server" }
rand = "0.8"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
futures = { version = "0.3.28", default-features = false, features = ["std", "async-await"] }
tracing-subscriber = "0.3"
async-nats = {path = ".", features = ["experimental"]}
reqwest = "0.11.18"
jsonschema = "0.17.1"


[features]
default = ["server_2_10"]
service = []
experimental = ["service"]
"server_2_10" = []
slow_tests = []
compatibility_tests = []


[[bench]]
name = "main"
harness = false
lto = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
