[package]
name = "async-nats"
authors = ["Tomasz Pietrek <tomasz@nats.io>", "Casper Beyer <caspervonb@pm.me>"]
version = "0.45.0"
edition = "2021"
rust = "1.79.0"
description = "A async Rust NATS client"
license = "Apache-2.0"
documentation = "https://docs.rs/async-nats"
homepage = "https://github.com/nats-io/nats.rs"
repository = "https://github.com/nats-io/nats.rs"
readme = "../README.md"
keywords = ["nats", "client", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
aws-lc-rs = { version = "1.6", optional = true }
memchr = "2.4"
bytes = { version = "1.4.0", features = ["serde"] }
futures-util = { version = "0.3.28", default-features = false, features = ["std", "sink"] }
nkeys = { version = "0.4", optional = true }
once_cell = "1.18.0"
regex = "1.9.1"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1.0.104"
serde_repr = "0.1.16"
tokio = { version = "1.36", features = ["macros", "rt", "fs", "net", "sync", "time", "io-util"] }
tokio-stream = "0.1.17"
url = { version = "2"}
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = "0.7"
rustls-pki-types = "1"
nuid = { version = "0.5", optional = true }
serde_nanos = { version = "0.1.3", optional = true }
time = { version = "0.3.36", features = ["parsing", "formatting", "serde", "serde-well-known"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rustls-native-certs = "0.7"
tracing = "0.1"
thiserror = "1.0"
base64 = { version = "0.22", optional = true }
tryhard = { version = "0.5", optional = true }
ring = { version = "0.17", optional = true }
rand = "0.8"
rustls-webpki = { package = "rustls-webpki", default-features = false, version = "0.102" }
portable-atomic = "1"
tokio-websockets = { version = "0.10", default-features = false, features = ["client", "rand", "rustls-webpki-roots"], optional = true }
pin-project = "1.0"

[dev-dependencies]
ring = "0.17"
criterion =  { version = "0.5", features = ["async_tokio"]}
nats-server = { path = "../nats-server" }
rand = "0.8"
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }
futures = { version = "0.3.28", default-features = false, features = ["std", "async-await"] }
tracing-subscriber = "0.3"
async-nats = {path = ".", features = ["service", "server_2_10"], default-features = false}
reqwest = "0.11.18"
jsonschema = "0.17.1"

# for -Z minimal-versions
num = "0.4.1"

[features]
default = ["server_2_10", "service", "ring", "jetstream", "nkeys", "crypto", "object-store", "kv", "websockets", "nuid", "time-crate"]
# Datetime backend selection (mutually exclusive)
# Use time crate for datetime types (default, backward compatible)
time-crate = ["dep:time", "jetstream", "service"]
# Use chrono crate for datetime types (alternative)
chrono-crate = ["dep:chrono", "jetstream", "service"]
# Enables Service API for the client.
jetstream = ["dep:serde_nanos", "dep:tryhard", "dep:base64"]
kv = ["jetstream"]
object-store = ["jetstream", "crypto"]
service = ["dep:serde_nanos"]
crypto = []
websockets = ["dep:tokio-websockets"]
aws-lc-rs = ["dep:aws-lc-rs", "tokio-rustls/aws-lc-rs", "tokio-websockets?/aws-lc-rs", "rustls-webpki/aws_lc_rs"]
ring = ["dep:ring", "tokio-rustls/ring", "tokio-websockets?/ring"]
fips = ["aws-lc-rs", "tokio-rustls/fips"]
nkeys = ["dep:nkeys", "dep:base64"]
# Use NUID for generating unique IDs (inbox subjects, object store nonces).
# When disabled, falls back to rand-based alphanumeric ID generation.
nuid = ["dep:nuid"]
# All experimental features are part of this feature flag.
experimental = []
# Features that require nats-server version 2.10 or higher.
# It is enabled by default since given official nats-server release.
"server_2_10" = []
"server_2_11" = []
"server_2_12" = []
# Used for enabling/disabling tests that by design take a lot of time to  complete.
# Those tests are usually used for time-sensitive checks, like consumer heartbeats, longer timeouts, etc.
slow_tests = []
# Used for tests that ensure compatibility across client libraries in APIs that are abstraction
# layer build on top of NATS server features (Service API, KV, Object Store etc.)
compatibility_tests = []


[[bench]]
name = "main"
harness = false
lto = true

[package.metadata.docs.rs]
# We can't use `all-features` because the `fips` doesn't compile in restricted docs.rs environment.
features = ["server_2_10", "server_2_11", "server_2_12", "jetstream", "kv", "object-store", "service", "nkeys", "crypto", "websockets", "experimental", "ring", "aws-lc-rs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-hack]
# Optimize feature powerset testing
# See CARGO_HACK_STRATEGY.md for detailed explanation

[[example]]
name = "kv"
required-features = ["kv"]

