[package]
name = "nats-experimental"
version = "0.0.0"
edition = "2021"

[dependencies]
subslice = "0.2.3"
bytes = "1.1.0"
futures = "0.3.21"
futures-sink = "0.3.21"
futures-util = "0.3.21"
json = "0.12.4"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
itoa = "1"
