[package]
name = "nats-experimental"
version = "0.0.0"
edition = "2021"

[dependencies]
subslice = "0.2.3"
bytes = "1.1.0"
futures = "0.3.21"
futures-sink = "0.3.21"
futures-util = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] } 
serde_json = "1.0.79"
serde_repr = "0.1.7"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
itoa = "1"
url = "2"
tokio-rustls = "0.23"
rustls-pemfile = "0.3.0"
webpki-roots = "0.22"

[dev-dependencies]
lazy_static = "1.4.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode-perl"] }
url = "2.2.2"
nuid = "0.3.1"
json = "0.12"

