[package]
name = "nats-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode-perl"] }
url = "2"
json = "0.12"
nuid = "0.3.1"

