[package]
name = "nats_test_server"
description = "An intentionally buggy NATS server that facilitates fault injection for testing error paths in NATS-based libraries"
version = "0.1.2"
authors = ["Tyler Neely <tyler@nats.io>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
log = "0.4.8"
serde_json = "1.0.55"
serde = "1.0.114"
serde_derive = "1.0.114"
env_logger = "0.7.1"
