[package]
name = "web"
authors = ["Ramon Berrutti"]
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
futures-util = { version = "0.3" }

async-nats = { path = "../async-nats" }
