[package]
name = "nats_test_server"
description = "An intentionally buggy NATS server that facilitates fault injection for testing error paths in NATS-based libraries"
version = "0.3.0"
authors = ["Tyler Neely <tyler@nats.io>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
log = "0.4.11"
serde_json = "1.0.59"
serde = "1.0.117"
serde_derive = "1.0.117"
env_logger = "0.8.1"

[dev-dependencies]
nats = { path = ".." }
