[package]
name = "nats-clap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.21"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio = "1.16"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[workspace]
